<resources>
    <string name="app_name">Torguo</string>
    <string name="mapbox">sk.eyJ1IjoiYWdyaW1zIiwiYSI6ImNrOXpkOXB4MDA2eHkzZ3FyeXRqZ3pxcGwifQ.EIaxLF0tqt2uAnCU854QUQ</string>
    <string name="user_login">USER LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="create_a_tourgo_account">CREATE A TOURGO ACCOUNT</string>
    <string name="enter_email_addresss">Enter Email Address</string>
    <string name="send_verification_e_mail">SEND VERIFICATION E-MAIL</string>
    <string name="go_back_to_login_page">Go Back To Login Page</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="title_activity_only_once">OnlyOnce</string>
    <string name="action_settings">Settings</string>
    <string name="pref_previously_started">Congratulations you have installed this app</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start">TOURGO</string>
    <string name="start_">Don\'t believe just try it</string>
    <string name="first_val">A solution to all your travel queries Get Started</string>
    <string name="skip_this_part">Skip -></string>
    <string name="second_text">Don\'t be confused, Just go for it, Get one guide by your side and other in the pocket</string>
    <string name="third_text">Just pack your bags and leave, Our whole team is just working to make your trip memorable</string>
    <string name="get_started"> Get Started</string>
    <string name="yes">Yes,Of course</string>
    <string name="no">Not exactly</string>
    <string name="country">Country</string>
    <string name="are_you_a_travel_enthusiast">Are you a travel enthusiast ?</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_n_sign_in">Already have an account ??\n Sign in</string>
    <string name="upload">Upload</string>
    <string name="default_image">Default image</string>
    <string name="choose">Choose</string>
    <string name="India">India</string>
    <string name="tourgo">TOURGO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying ... </string>
    <string-array name="spinnerItems">
        <item>India</item>
        <item>Srilanka</item>
        <item>Austria</item>
        <item>USA</item>
        <item>Canada</item>
    </string-array>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_provider_home_page">ProviderHomePage</string>
    <string name="nosizerecyclerview">Sorry, no results found</string>
    <string name="info">
        It is an initiative to feed the needy people by utilizing the food left from the  you organise .Any amount of contribution is appreciated .
        Get started with us .

    </string>

    <string name="largetext"> Testing thi xD </string>
    <string name="title_activity_provider_options_drawer_actvity">ProviderOptionsDrawerActvity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sahyog App</string>
    <string name="nav_header_subtitle">support.sahyogapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="send_button">Send Button</string>
    <string name="first_text">Share your problem or ask any querry we will get back to you</string>
    <string name="hello">Hello</string>
    <string name="search_area">Enter Search Area(in KM)</string>
    <string name="title_activity_further_detail_actvity">Settings</string>


    <string name="confirm_details">Just confirm the details and you are done .We will create an event. Make sure the details are correct.</string>
    <string name="forgot"> <u>Forgot Password?</u> </string>
    <string name="signup"><u>SignUp</u></string>
    <string name="login"><u>Login</u></string>
    <string name="join_us"><u>Join us</u></string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="demo_number">9837685185</string>
    <string name="dream">Software Intern</string>
    <string name="demo_address">61 Gandhi nagar Meerut</string>
    <string name="demo_age">20</string>

</resources>
