<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55efc4"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingLeft="33dp"
            android:paddingTop="10dp"
            android:background="#ffffff"
            android:text="@string/password_reset"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="170dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/textfield_bg"
            android:hint="@string/enter_email_addresss"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >



        </AutoCompleteTextView>




        <Button
            android:id="@+id/sendmail"
            android:layout_marginTop="350dp"
            android:elevation="20dp"
            android:textColor="#fff"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/send_verification_e_mail"
            android:background="@drawable/btn_bg1"

            />

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#dfe6e9"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/go_back_to_login_page"
            android:layout_marginTop="470dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>

</LinearLayout>